--- a/style/style.css
+++ b/style/style.css
@@ -289,7 +289,7 @@ main {
 }
 
 .news-container {
-    padding: 0 80px 80px 40px;
+    padding: 0 10px 40px 10px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 50px;
@@ -322,6 +322,30 @@ main {
 }
 
 /*------------------
+        Footer
+------------------*/
+footer {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+footer div img {
+    width: 477px
+}
+
+.footer-icon {
+    display: flex;
+}
+
+.footer-icon i {
+    margin: 10px;
+    font-size: 32px
+}
+
+/*------------------
     Keyframes
 -------------------*/
 @keyframes man {
@@ -345,12 +369,76 @@ main {
 /*------------------
     Media Query
 -------------------*/
-@media only screen and (max-width:688px) {
+@media only screen and (max-width:1180px) {
 
-    /* header */
+
+    .header-item {
+        width: 100%;
+        position: relative;
+    }
+
+    .players {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/* tablet */
+
+@media only screen and (max-width:1000px) {
+    nav {
+        justify-content: space-between;
+    }
+
+    .players-container {
+        width: 100%;
+        margin-bottom: 100px;
+    }
+
+    .header-item {
+        height: 438px;
+        width: 556px;
+        position: relative;
+    }
+
+    .match-highlights-info h1,
+    .match-details-info h1 {
+        font-size: 30px;
+    }
+
+    .nav-item .fa-bars {
+        display: block;
+        font-size: 20px;
+        margin-left: 10px;
+    }
+
     .nav-item ul {
         display: none
     }
+
+    .players {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .news-container {
+
+        grid-template-columns: 1fr 1fr;
+
+    }
+
+    .header-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-left: 100px;
+    }
+
+}
+
+/* mobile device */
+
+@media only screen and (max-width:688px) {
+
+    /* header */
+
 
     .img-2,
     .img-3 img {
@@ -379,6 +467,11 @@ main {
         margin-left: 10px;
     }
 
+    .header-item {
+        width: 260px;
+        height: 330px
+    }
+
     .header-item-text h1 {
         font-size: 36px;
     }
@@ -399,7 +492,7 @@ main {
         grid-template-columns: 1fr;
         width: 100vw;
         padding: 0px;
-        height: 100vh
+        height: auto
     }
 
     .header-item {
@@ -462,6 +555,19 @@ main {
     .latest-news>h1 {
         display: block;
         text-align: center;
+    }
+
+    /* footer  */
+    footer {
+        margin-top: 20px
+    }
+
+    footer div img {
+        width: 300px
+    }
+
+    footer i {
+        font-size: 16px
     }
 
 }
